--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -11,12 +11,6 @@
         android:text="espresso 简单使用" />
 
     <Button
-        android:id="@+id/btn_02"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="espresso 异步请求" />
-
-    <Button
         android:id="@+id/btn_03"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +26,33 @@
         android:id="@+id/btn_05"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="espresso 简单使用" />
+        android:text="espresso高级使用：Matcher" />
+
+    <Button
+        android:id="@+id/btn_02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="espresso 异步请求" />
+
+    <Button
+        android:id="@+id/btn_06"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="espresso 异步请求2" />
+
+
+    <Button
+        android:id="@+id/btn_07"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="espresso 异步请求3" />
+
+
+    <Button
+        android:id="@+id/btn_08"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="espresso 异步请求4" />
 
 
 </LinearLayout>
