--- a/app/src/main/res/layout/activity_a07_okhttp.xml
+++ b/app/src/main/res/layout/activity_a07_okhttp.xml
@@ -4,28 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qingmei2.sample_androidtest.a02_async_glide.A02AsyncActivity">
+    tools:context="com.qingmei2.sample_androidtest.a07_async_okhttp.A07OkhttpActivity">
 
-    <LinearLayout
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/btn01"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="网络请求图片" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".a07_async_okhttp.A07OkhttpActivity" />
 
 </android.support.constraint.ConstraintLayout>
