--- a/app/src/main/res/layout/activity_a05_toolbar.xml
+++ b/app/src/main/res/layout/activity_a05_toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qingmei2.sample_androidtest.a05toolbar.A05ToolbarActivity">
+    tools:context="com.qingmei2.sample_androidtest.a05_toolbar.A05ToolbarActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
