--- a/app/src/main/res/layout/activity_a01_simple.xml
+++ b/app/src/main/res/layout/activity_a01_simple.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".a_espresso.a02_async_glide.A02AsyncActivity">
+    tools:context=".a_espresso.a01_simple.A01SimpleActivity">
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,12 +18,27 @@
             android:id="@+id/btn01"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="网络请求图片" />
+            android:text="修改内容" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+        <EditText
+            android:id="@+id/et_01"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入账户名"
+            android:text="123456"
+            />
+
+        <Button
+            android:id="@+id/btn02"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="登录" />
 
     </LinearLayout>
 
