--- a/app/src/main/res/layout/activity_a03_list.xml
+++ b/app/src/main/res/layout/activity_a03_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qingmei2.sample_androidtest.a03_list.A03ListActivity">
+    tools:context=".a_espresso.a03_list.A03ListActivity">
 
     <LinearLayout
         android:layout_width="0dp"
