--- a/app/src/main/res/layout/activity_a08_dagger2.xml
+++ b/app/src/main/res/layout/activity_a08_dagger2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qingmei2.sample_androidtest.a08_async_dagger2.A08Dagger2Activity">
+    tools:context=".a_espresso.a08_async_dagger2.A08Dagger2Activity">
 
     <LinearLayout
         android:layout_width="0dp"
