--- a/app/src/main/res/layout/activity_a00_index.xml
+++ b/app/src/main/res/layout/activity_a00_index.xml
@@ -62,6 +62,12 @@
         android:text="Lv2-Mockito library" />
 
     <Button
+        android:id="@+id/btn_11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lv3-Robolectric library" />
+
+    <Button
         android:id="@+id/btn_10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
